blue_green/foo-api-svc-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-api-svc-preview # service 이름
  namespace: dev # service가 속할 namespace
spec:
  type: NodePort
  externalTrafficPolicy: Local # Local,Cluster
  # Local: node 내에 있는 pod에만 접근할 수 있도록 하여 불필요한 네트워크 홉을 줄여준다.
  # Cluster: 다른 node의 pod로도 접근할 수 있다.
  selector:
    app.kubernetes.io/name: foo-api
    # service의 파드 셀렉터는 엔드포인트 목록을 만드는 데 사용됩니다.
  ports:
    - protocol: TCP
      port: 80 # 서비스 내부의 clsuterip 포트번호
      targetPort: 5000 # pod의 포트번호
      nodePort: 30124 # 클러스터 노드의 포트 30123으로 서비스에 액세스 가능
